// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot should override the prop provided by the theme creator with the one given by the user 1`] = `
<div>
  This should render instead
</div>
`;

exports[`Slot should pass any other extra prop to the Fill 1`] = `
<div>
  Data passed as prop
</div>
`;

exports[`Slot should pass the data prop to the Fill 1`] = `
<div>
  Data passed as prop
</div>
`;

exports[`Slot should read the data from state.source and pass it to the Fill 1`] = `
<div>
  This would normally be data for this route
</div>
`;

exports[`Slot should render 2 elements with all props 1`] = `
Array [
  <div>
    {
  "name": "namespace1 - fill 5.1",
  "data": "This would normally be data for this route"
}
  </div>,
  <div>
    {
  "name": "namespace1 - fill 5.2",
  "data": "This would normally be data for this route"
}
  </div>,
]
`;

exports[`Slot should render children as a fallback 1`] = `"fallback"`;

exports[`Slot should work in the most basic case 1`] = `
<div>
  Im a Fill
</div>
`;

exports[`useFills should not return the fill when library doesn't match a component in libraries 1`] = `null`;

exports[`useFills should not return the fill when library is not specified 1`] = `null`;

exports[`useFills should not return the fill when the slot is not specified 1`] = `null`;

exports[`useFills should re-render the fill when updating the props 1`] = `
<div
  data-name="namespace1 - test fill 1"
  data-number={43}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills should remind to specify the slot name if called without arguments 1`] = `null`;

exports[`useFills should render the debug slots when \`state.frontity.debug\` is true 1`] = `
<div
  className="css-35givi"
  data-slot-name="slot 1"
>
  Slot: "
  slot 1
  "
</div>
`;

exports[`useFills should render the fills in the order of priority 1`] = `
Array [
  <div
    data-name="namespace2 - test fill 3"
    data-number={3}
    id="test-fill"
  >
    Im a Fill
  </div>,
  <div
    data-name="namespace1 - test fill 1"
    data-number={1}
    id="test-fill"
  >
    Im a Fill
  </div>,
]
`;

exports[`useFills should skip rendering the fills with value \`false\` 1`] = `
<div
  data-name="namespace2 - test fill 3"
  data-number={3}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills should warn when the Fill component is not found in libraries 1`] = `null`;

exports[`useFills should work in the most basic case 1`] = `
<div
  data-name="namespace1 - test fill 1"
  data-number={1}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills should work when \`state.fills\` doesn't contain any fills 1`] = `null`;

exports[`useFills should work when \`state.fills\` is missing 1`] = `null`;

exports[`useFills should work when the slot does not exist 1`] = `null`;
